--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <section class="hero">
         <div class="overlay"></div>
         <div class="container flex">
-          <div class="herocontent">
-            <h1>Nasza firma oferuje najwyższej <br />jakości produkty.</h1>
+          <div class="hero-content">
+            <h1>Nasza firma oferuje najwyższej jakości produkty.</h1>
             <p>Nie wierz nam na słowo - sprawdź</p>
             <button class="btn">
               <a href="#offer">Oferta</a>
@@ -47,8 +47,8 @@
           <h2 class="workers">Nasi Specjaliści</h2>
           <div class="people flex">
             <img src="people1.jpg" alt="ppl1" />
-            <div class="peopledescribtion">
-              <p class="pplname">Imię i Nazwisko</p>
+            <div class="people-description">
+              <p class="ppl-name">Imię i Nazwisko [ dział ]</p>
               <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa
                 illum repellendus incidunt nesciunt accusamus ea omnis cum
@@ -59,8 +59,8 @@
           </div>
           <div class="people flex">
             <img src="people2.jpg" alt="ppl2" />
-            <div class="peopledescribtion">
-              <p class="pplname">Imię i Nazwisko</p>
+            <div class="people-description">
+              <p class="ppl-name">Imię i Nazwisko [ dział ]</p>
               <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa
                 illum repellendus incidunt nesciunt accusamus ea omnis cum
@@ -74,11 +74,11 @@
 
       <section class="offer flex" id="offer">
         <div class="container">
-          <h2 class="offertitle">Czym zajmuje się nasza firma?</h2>
+          <h2 class="offer-title">Czym zajmuje się nasza firma?</h2>
           <div class="box flex">
             <div class="box-item new">
               <p>Usługa 1</p>
-              <span> (nowość)</span>
+              <span class="new-item"> (nowość)</span>
             </div>
             <div class="box-item">Usługa 2</div>
             <div class="box-item">Usługa 3</div>
@@ -90,14 +90,16 @@
       </section>
     </main>
 
-    <footer class="footer flex">
-      <div class="copyright">
-        Nazwa firmy - wszelkie prawa zastrzeżone, 2019
-      </div>
-      <div class="icons">
-        <div class="icons-item"><i class="fa-brands fa-instagram"></i></div>
-        <div class="icons-item">
-          <i class="fa-brands fa-square-facebook"></i>
+    <footer class="footer">
+      <div class="container-footer footer-flex">
+        <div class="copyright">
+          Nazwa firmy - wszelkie prawa zastrzeżone, 2019
+        </div>
+        <div class="icons">
+          <div class="icons-item"><i class="fa-brands fa-instagram"></i></div>
+          <div class="icons-item">
+            <i class="fa-brands fa-square-facebook"></i>
+          </div>
         </div>
       </div>
     </footer>
