--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
           <div class="hero-content">
             <h1>Nasza firma oferuje najwyższej jakości produkty.</h1>
             <p>Nie wierz nam na słowo - sprawdź</p>
-            <button class="btn">
-              <a href="#offer">Oferta</a>
-            </button>
+            <a class="btn" href="#offer">Oferta</a>
           </div>
         </div>
       </section>
