--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
       </section>
 
-      <section class="aboutus" id="aboutus">
+      <section class="about-us" id="aboutus">
         <div class="container">
           <h2 class="workers">Nasi Specjaliści</h2>
           <div class="people flex">
